# webview2

./: Cargo.toml
public/: index.html
src/: host_object.rs  lib.rs
webview2/: Cargo.toml
webview2-sys/: build.rs
webview2-sys/idl2rs/src/: main.rs
webview2-sys/microsoft.web.webview2.1.0.2592.51/: WebView2.idl
webview2-sys/src/: lib.rs
webview2/examples/: background_color.rs  composition-controller.rs  dpi.rs  host_object.rs  user_agent.rs  virtual_mapping.rs  win32.rs
webview2/src/: host_object.rs  interfaces.rs  lib.rs  util.rs
webview2wrapper/: Cargo.toml
webview2wrapper/src/: lib.rs
