[package]
name = "webview2"
version = "0.1.4"
authors = ["Yin Guanhao <sopium@mysterious.site>"]
edition = "2018"
license = "MIT"
description = "Rust bindings for WebView2"
repository = "https://github.com/sopium/webview2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[dependencies]
winapi = { version = "0.3.8", features = [
    "combaseapi",
    # For SHCreateMemStream.
    "shellapi",
    "winerror",
] }
widestring = "0.5.0"
com = "0.2.0"
once_cell = "1.3.1"
winit = "0.24.0"
webview2-sys = { path = "./webview2-sys", version = "0.1.0" }
windows = { version = "0.52", features = [ "implement", "Win32_Foundation", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Ole", "Win32_System_SystemInformation", "Win32_System_SystemServices", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Globalization", "Win32_UI_HiDpi", "Win32_UI_Input", "Win32_System_Variant" ] }

[dev-dependencies]
native-windows-gui = { version = "1.0.4", features = ["high-dpi"] }
winapi = { version = "0.3.9", features = ["libloaderapi"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[lib]
crate-type = ["cdylib"]   
