[package]
name = "webview2wrapper"
version = "0.1.0"
edition = "2018"

[dependencies]
winapi = { version = "0.3.8", features = [
    "combaseapi",
    # For SHCreateMemStream.
    "shellapi",
    "winerror",
] }
webview2 = { path = "../webview2" }
winit = "0.24.0"
once_cell = "1.3.1"

[lib]
crate-type = ["lib", "cdylib"]

