[package]
name = "webview2wrapper"
version = "0.1.0"
edition = "2018"

[dependencies]
winapi = { version = "0.3.8", features = [
    "combaseapi",
    # For SHCreateMemStream.
    "shellapi",
    "winerror",
    "shellscalingapi"
] }
webview2 = { path = "../webview2" }
winit = "0.24.0"
once_cell = "1.3.1"
winreg = "0.55.0"

[lib]
crate-type = ["lib", "cdylib"]

